<resources>
    <string name="app_name">E-Commerce</string>
    <string name="sales_icon">Sales</string>
    <string name="contacts_text">Контакты</string>
    <string name="abut_text">Про нас</string>
    <string name="main_scene_text">Главная</string>
    <string name="logo_of_app1">Courses</string>
    <string name="logo_of_app2">App</string>
    <string name="categories">Категории</string>
    <string name="category">Категория</string>
    <string name="game_category">Игры</string>
    <string name="course_item">course item</string>
    <string name="course_start_date">Старт обучения:</string>
    <string name="course_level">Уровень:</string>
    <string name="course_desc">За программу вы изучите построение графических приложений под ПК,
разработку веб сайтов на основе Java Spring Boot, изучите построение полноценных Андроид приложений
и отлично изучите сам язык Джава!</string>
</resources>